# espressif-application-template

./: .gitignore  CMakeLists.txt  README.md  all-from-scratch  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.github/workflows/: main.yml
components/AppEvents/: AppEvents.cpp  CMakeLists.txt
components/AppEvents/include/: AppEvents.h
components/Bluetooth/: Bluetooth.cpp  CMakeLists.txt  bt_svc_app.cpp  bt_svc_batt.cpp  bt_svc_dis.cpp
components/Bluetooth/include/: Bluetooth.h  bkt_uuid.h  bt_general.h  bt_svc_app.h  bt_svc_batt.h  bt_svc_dis.h
components/CommandLine/: CMakeLists.txt  CommandLine.cpp  Kconfig
components/CommandLine/include/: CommandLine.h
components/Logger/: CMakeLists.txt  Kconfig  Logger.cpp
components/Logger/include/: Logger.h
components/PilotLight/: CMakeLists.txt  Kconfig  Kconfig.new  PilotLight.cpp
components/PilotLight/include/: PilotLight.h
components/freertos-addons/: CMakeLists.txt
components/freertos-addons/freertos-addons/c++/Source/: cthread.cpp  ctickhook.cpp  cworkqueue.cpp
components/freertos-addons/freertos-addons/c++/Source/include/: event_groups.hpp  mem_pool.hpp  mutex.hpp  queue.hpp  read_write_lock.hpp  semaphore.hpp  tasklet.hpp  thread.hpp  tickhook.hpp  ticks.hpp  timer.hpp  workqueue.hpp
components/freertos-addons/freertos-addons/c/Source/: mem_pool.c  read_write_lock.c  workqueue.c  zero_copy_queue.c
components/freertos-addons/freertos-addons/c/Source/include/: workqueue.h
components/led_strip/: CMakeLists.txt
components/priorities/: CMakeLists.txt
components/priorities/include/: app_priority.h  bkt_priority.h
main/: CMakeLists.txt  Kconfig  cmds.cpp  cmds.h  main.cpp
partitions/: 4MB.csv  8MB.csv
